v1.0.2

                Features:
                    - Fixed foreign keys ordering.
                    - Fixed TLS connection error.
                    - Fixed naming with special characters.

2025-11-19      v1.0.1

                Features:
                    - Improved hash workflow.
                    - DROPs are working.

2025-11-07      v1.0.0

                Features:
                    - Initial version: dump, dump compare, run with config.