@@ -4,6 +4,7 @@ v1.0.2
                     - Fixed foreign keys ordering.
                     - Fixed TLS connection error.
                     - Fixed naming with special characters.
+                    - Added checks in schema_a.sql and schema_b.sql.
 
 2025-11-19      v1.0.1
 
